--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           
         </tr>
         <tr> 
-          <td>TBA  <br>                                   <a href="www.example.com."  target="_blank" ><img src="nature.jpg" alt="TBA"  hight=75 Width=75   > </td>
+          <td>TBA  <br>                                   <a href="https://parsoron.github.io/QuizGame/"  target="_blank" ><img src="capture.jpg" alt="quiz game"  hight=75 Width=75   > </td>
           <td>TBA  <br>                                  <a href="www.example.com."  target="_blank" ><img src="nature.jpg" alt="TBA"  hight=75 Width=75   ></td>
           <td>TBA  <br>                                   <a href="www.example.com."  target="_blank" ><img src="nature.jpg" alt="TBA"  hight=75 Width=75  ></td>
          
